Creating Push-to-Deploy Remote Repo

--- a/.netrc
+++ b/.netrc
@@ -1,1 +1,1 @@
-ine code.google.com login brijesh@inheritx.com password 1/iEZe-CJFoUVWub9QKy0vhm4_s3xSC3kDf_bysAUmawU
+machine code.google.com login brijesh.inheritx@gmail.com password 1/iEZe-CJFoUVWub9QKy0vhm4_s3xSC3kDf_bysAUmawU
